# UnRAWer

./: .gitignore  CMakeLists.txt  README.md  Unrawer.sln
UnRAWer/: Unrawer.rc  Unrawer.vcxproj  Unrawer.vcxproj.filters  resource.h  ~AutoRecover.Unrawer.vcxproj
UnRAWer/src/: Common.h  IMAGEIO.CPP  LOG.CPP  LOG.H  Timer.h  Unrawer.cpp  Unrawer.h  cli.cpp  cli.h  do_process.cpp  do_process.h  exif_parser.cpp  exif_parser.h  fileProcessor.cpp  fileProcessor.h  gui.cpp  gui.h  gui.qrc  gui.ui  imageio.h  main.cpp  moc_ui.cpp  pch.cpp  pch.h  preview.cpp  preview.h  process.cpp  process.h  processing.cpp  processing.h  processors.cpp  processors.h  qrc_gui.cpp  settings.cpp  settings.h  stdafx.cpp  stdafx.h  threadpool.h  threadpool.h_  ui.cpp  (+3 more)
cmake/: FindDNG.cmake  FindLCMS2.cmake  FindXMP.cmake
cmake/modules/: FindLibRaw.cmake  FindOpenJPH.cmake  FindX265.cmake
